// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Validations component matches the snapshot when the component renders with default props 1`] = `
<MockComponent
  info={Array []}
  onBlur={[Function]}
  validations={Array []}
  warnings={Array []}
/>
`;

exports[`Validations component matches the snapshot when the hoc is passed an anonymous function with no name or display name 1`] = `
<Component
  info={Array []}
  onBlur={[Function]}
  validations={Array []}
  warnings={Array []}
/>
`;

exports[`Validations component renderValidationMarkup returns the Icon when the component has an array of children 1`] = `
<MockComponent
  info={Array []}
  onBlur={[Function]}
  validations={Array []}
  warnings={Array []}
>
  <div />
  foo
  <div />
  <Icon
    bgSize="small"
    key="error-icon"
    type="error"
  />
</MockComponent>
`;

exports[`Validations component renderValidationMarkup returns the children if no type has been set 1`] = `
<MockComponent
  info={Array []}
  onBlur={[Function]}
  validations={Array []}
  warnings={Array []}
>
  <div />
</MockComponent>
`;
